bidirectional hello map working

--- a/Standalone map/index.html
+++ b/Standalone map/index.html
@@ -118,7 +118,7 @@
       console.log(statesData["Texas"]);
 
       const displayMapTile = true;
-      const displayStatesGeoJson = true;
+      const displayStatesGeoJson = false;
       const displayMetroCircles = true;
 
       const blankStyle = {
