--- a/Boil/streamlit-component-x/src/streamlit_component_x/frontend/index.html
+++ b/Boil/streamlit-component-x/src/streamlit_component_x/frontend/index.html
@@ -14,9 +14,6 @@
   <link href="https://unpkg.com/maplibre-gl@^5.6.0/dist/maplibre-gl.css" rel="stylesheet" />
 
   <style>
-   
-
-
     #map {
       width: 800px;
       height: 800px;
@@ -120,19 +117,16 @@
     console.log(statesData["California"]);
     console.log(statesData["Texas"]);
 
-    const displayMapTile = true;
-    const displayStatesGeoJson = false;
-    const displayMetroCircles = true;
-
     const blankStyle = {
       version: 8,
       sources: {},
       layers: [],
     };
 
+    // Always start with the default style and center
     var map = new maplibregl.Map({
       container: "map",
-      style: displayMapTile ? "https://tiles.openfreemap.org/styles/positron" : blankStyle,
+      style: "https://tiles.openfreemap.org/styles/positron",
       center: [
         -77.719519,
         39.321314
@@ -178,73 +172,189 @@
     };
 
     map.on("load", function () {
-      if (displayStatesGeoJson) {
-        fetch("statesGeo.json")
-          .then((response) => response.json())
-          .then((data) => {
-            // Iterate and add properties to each feature
-            data.features.forEach((feature) => {
-              const stateName = feature.properties.NAME;
-              const stateData = statesData[stateName];
-              if (stateData) {
-                feature.properties.fillColor = stateData.fillColor;
-                feature.properties.borderColor = stateData.borderColor;
-                feature.properties.jobNumber = stateData.jobNumber;
-              }
-            });
-
-            map.addSource("states", {
-              type: "geojson",
-              data: data,
-            });
-
-            map.addLayer({
-              id: "states-fill",
-              type: "fill",
-              source: "states",
-              paint: {
-                // Use the fillColor property from each feature
-                "fill-color": ["get", "fillColor"],
-                "fill-opacity": 0,
-              },
-            });
-
-            map.addLayer({
-              id: "states-outline",
-              type: "line",
-              source: "states",
-              paint: {
-                // Use the borderColor property from each feature
-                "line-color": ["get", "borderColor"],
-                "line-width": 1,
-              },
-            });
+      // Always add statesGeoJson and metro circles, but control visibility in applyView
+      fetch("statesGeo.json")
+        .then((response) => response.json())
+        .then((data) => {
+          data.features.forEach((feature) => {
+            const stateName = feature.properties.NAME;
+            const stateData = statesData[stateName];
+            if (stateData) {
+              feature.properties.fillColor = stateData.fillColor;
+              feature.properties.borderColor = stateData.borderColor;
+              feature.properties.jobNumber = stateData.jobNumber;
+            }
           });
-      }
 
-      if (displayMetroCircles) {
-        // Add metro circles source and layer
-        map.addSource("metro-circles", {
-          type: "geojson",
-          data: metroGeoJson,
+          map.addSource("states", {
+            type: "geojson",
+            data: data,
+          });
+
+          map.addLayer({
+            id: "states-fill",
+            type: "fill",
+            source: "states",
+            paint: {
+              "fill-color": ["get", "fillColor"],
+              "fill-opacity": 1, // Start visible, will be controlled by applyView
+            },
+          });
+
+          map.addLayer({
+            id: "states-outline",
+            type: "line",
+            source: "states",
+            paint: {
+              "line-color": ["get", "borderColor"],
+              "line-width": 1,
+              "line-opacity": 1, // Start visible, will be controlled by applyView
+            },
+          });
         });
 
-        map.addLayer({
-          id: "metro-circles-layer",
-          type: "circle",
-          source: "metro-circles",
-          paint: {
-            "circle-radius": ["get", "radius"],
-            "circle-color": "#1976d2",
-            "circle-opacity": 0.6,
-            "circle-stroke-width": 2,
-            "circle-stroke-color": "#0d47a1",
-          },
-        });
+      // Add metro circles source and layer
+      map.addSource("metro-circles", {
+        type: "geojson",
+        data: metroGeoJson,
+      });
 
-      }
-
+      map.addLayer({
+        id: "metro-circles-layer",
+        type: "circle",
+        source: "metro-circles",
+        paint: {
+          "circle-radius": ["get", "radius"],
+          "circle-color": "#1976d2",
+          "circle-opacity": 0.6,
+          "circle-stroke-width": 2,
+          "circle-stroke-color": "#0d47a1",
+        },
+        layout: {
+          "visibility": "visible", // Will be controlled by applyView
+        },
+      });
     });
+
+    function setMapLock(map, locked) {
+      if (locked) {
+        map.dragPan.disable();
+        map.scrollZoom.disable();
+        map.boxZoom.disable();
+        map.keyboard.disable();
+        map.doubleClickZoom.disable();
+        map.touchZoomRotate.disable();
+      } else {
+        map.dragPan.enable();
+        map.scrollZoom.enable();
+        map.boxZoom.enable();
+        map.keyboard.enable();
+        map.doubleClickZoom.enable();
+        map.touchZoomRotate.enable();
+      }
+    }
+
+    function getMetroByName(name) {
+      return metroCircles.find((m) => m.name === name);
+    }
+
+    // --- View logic ---
+    function applyView(view) {
+      // Defaults
+      let fillOpacity = 1;
+      let borderOpacity = 1;
+      let showMapTile = true;
+      let showMetroCircles = true;
+      let showStatesGeoJson = true;
+      let lockMap = false;
+      let center = [-77.719519, 39.321314];
+      let zoom = 3;
+
+      if (view === "country") {
+        fillOpacity = 1;
+        borderOpacity = 1;
+        showMapTile = true;
+        showMetroCircles = false;
+        showStatesGeoJson = true;
+        lockMap = false;
+        center = [-98, 39];
+        zoom = 3;
+      } else if (view === "country-metro") {
+        fillOpacity = 0;
+        borderOpacity = 0.5;
+        showMapTile = true;
+        showMetroCircles = true;
+        showStatesGeoJson = true;
+        lockMap = true;
+        center = [-98, 39];
+        zoom = 3;
+      } else {
+        const metro = getMetroByName(view);
+        if (metro) {
+          fillOpacity = 0;
+          borderOpacity = 0.5;
+          showMapTile = true;
+          showMetroCircles = true;
+          showStatesGeoJson = true;
+          lockMap = true;
+          center = metro.coords;
+          zoom = 9;
+        }
+      }
+
+      // Set map style if needed (blank style if showMapTile is false)
+      if (showMapTile) {
+        map.setStyle("https://tiles.openfreemap.org/styles/positron");
+      } else {
+        map.setStyle(blankStyle);
+      }
+
+      // Wait for style to load before setting layers
+      map.once("styledata", () => {
+        // Set fill opacity
+        if (map.getLayer("states-fill")) {
+          map.setPaintProperty("states-fill", "fill-opacity", fillOpacity);
+        }
+        // Set border opacity
+        if (map.getLayer("states-outline")) {
+          map.setPaintProperty("states-outline", "line-opacity", borderOpacity);
+        }
+        // Show/hide metro circles
+        if (map.getLayer("metro-circles-layer")) {
+          map.setLayoutProperty(
+            "metro-circles-layer",
+            "visibility",
+            showMetroCircles ? "visible" : "none"
+          );
+        }
+      });
+
+      // Pan/zoom and lock
+      map.flyTo({ center: center, zoom: zoom });
+      setMapLock(map, lockMap);
+    }
+
+    // --- Streamlit event handler ---
+    function onRender(event) {
+      const { data } = event.detail.args || {};
+      if (data) {
+        try {
+          const parsed = JSON.parse(data);
+          console.log("Received JSON from Streamlit:", parsed);
+          if (parsed.view) {
+            if (map.loaded()) {
+              applyView(parsed.view);
+            } else {
+              map.on("load", () => applyView(parsed.view));
+            }
+          }
+        } catch (e) {
+          console.log("Invalid JSON string received from Streamlit:", data);
+        }
+      }
+    }
+
+    window.addEventListener("streamlit:render", onRender);
   </script>
 </body>
 
